triangle z-index fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -219,9 +219,11 @@
   color: #fff;
   overflow: hidden;
   position: relative;
+  z-index: 1;
 }
 
 .section-title_theme_dark {
+  color: #fff;
   width: 60%;
   margin: 0 auto 20px;
   text-align: center;
@@ -231,6 +233,7 @@
 }
 
 .section-subtitle_theme_dark {
+  color: #fff;
   width: 60%;
   text-align: center;
   margin: 0 auto;
@@ -240,6 +243,7 @@
 }
 
 .table_theme_dark {
+  color: #fff;
   margin: 0 auto;
   width: 1100px;
   display: flex;
@@ -250,21 +254,17 @@
 }
 
 .table__cell_theme_dark {
+  color: #fff;
   margin-top: 80px;
   width: 200px;
-  z-index: 1;
 }
 
 .table__heading_theme_dark {
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: bold;
+  color: #fff;
 }
 
 .table__text_theme_dark {
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
+  color: #fff;
 }
 
 .kaufman__triangle {
@@ -275,7 +275,7 @@
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: 0;
+  z-index: -1;
 }
 
 .footer {
